--- a/public/style.css
+++ b/public/style.css
@@ -4,6 +4,26 @@
 
 body {
   background-color: #ebf3fc;
+  font-family: verdana, arial, helvetica, sans-serif;
+}
+
+.app__header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app__header__title {
+  width: 100%;
+}
+
+.app__header__title small {
+  font-size: .5em;
+  color: gray;
+}
+
+.app__header__form {
+  text-align: center;
 }
 
 .link {
@@ -36,4 +56,18 @@ body {
 
 .link__action a:hover {
   text-decoration: underline;
+}
+
+.link__title-anchor {
+  color: #333;
+  text-decoration: none;
+}
+
+.link__title-anchor:hover {
+  text-decoration: underline;
+}
+
+.link__no-image {
+  font-size: .5em;
+  color: gray;
 }
